--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
+
 {
   "name": "church-bot",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "bot.js",
   "scripts": {
+    "start": "node bot.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
